# political-fundraising-emails

./: .gitignore  README.md  compare_committees.py  csv_to_json.py  domain_party_mapping.csv  email_add_cmte.py  emails.sh  index.html  mbox_converter.py  pyproject.toml  training.csv
